--- a/Austins_Blog/Austins_Blog.csproj
+++ b/Austins_Blog/Austins_Blog.csproj
@@ -195,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\Style.css" />
     <Content Include="Content\theme-1.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -203,6 +204,7 @@
     <Content Include="images\.DS_Store" />
     <Content Include="images\blog\.DS_Store" />
     <Content Include="Private.config" />
+    <None Include="Properties\PublishProfiles\AustinsBlog20190725043522 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="images\about-me.jpg" />
     <Content Include="images\blog\blog-post-banner.jpg" />
@@ -357,6 +359,7 @@
     <Content Include="Scripts\tinymce\themes\silver\theme.min.js" />
     <Content Include="Scripts\tinymce\tinymce.js" />
     <Content Include="Scripts\tinymce\tinymce.min.js" />
+    <Content Include="Uploads\122294-computer-backgrounds-hd-1920x1200-samsung-galaxy.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -409,7 +412,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
